--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,6 +1,6 @@
 {
-  "url": "https://ton-connect.github.io/demo-dapp-with-react-ui/",
-  "name": "Demo Dapp with React UI",
+  "url": "https://zakhar-petukhov.github.io/testdapp.github.io/testdapp.github.io/",
+  "name": "Test Dapp",
   "iconUrl": "https://ton-connect.github.io/demo-dapp-with-react-ui/apple-touch-icon.png",
   "termsOfUseUrl": "https://ton-connect.github.io/demo-dapp-with-react-ui/terms-of-use.txt",
   "privacyPolicyUrl": "https://ton-connect.github.io/demo-dapp-with-react-ui/privacy-policy.txt"
