--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://zakhar-petukhov.github.io/testdapp.github.io/testdapp.github.io/",
+  "url": "https://zakhar-petukhov.github.io/testdapp.github.io/",
   "name": "Test Dapp",
   "iconUrl": "https://ton-connect.github.io/demo-dapp-with-react-ui/apple-touch-icon.png",
   "termsOfUseUrl": "https://ton-connect.github.io/demo-dapp-with-react-ui/terms-of-use.txt",
