--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://zakhar-petukhov.github.io/testdapp.github.io/",
-  "name": "Tonstakers Raffle Bot",
+  "name": "Tonstakers x Tonsharks bot",
   "iconUrl": "https://ton-connect.github.io/demo-dapp-with-react-ui/apple-touch-icon.png"
 }
